# mygfx

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/app/: Application.cpp  Application.h  CMakeLists.txt  CameraController.cpp  CameraController.h  Fwd.h  IBL.cpp  IBL.h  MathTypes.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  SDL.cpp  SDL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UIOverlay.cpp  UIOverlay.h
demo/app/resource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  Shader.cpp  Texture.cpp  Texture.h
demo/app/scene/: Camera.cpp  Camera.h  Node.cpp  Node.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
demo/demos/: 01_TriangleDemo.cpp  02_TextureDemo.cpp  03_ImGuiDemo.cpp  04_DescriptorSetDemo.cpp  05_ComputeShaderDemo.cpp  06_RenderTargetDemo.cpp  07_RenderQueueDemo.cpp  08_DynamicBufferDemo.cpp  09_AysncLoadDemo.cpp  09_PbrDemo.cpp  10_AysncLoadDemo.cpp  11_InstancingDemo.cpp  CMakeLists.txt  DemoApp.cpp  DemoApp.h  DrawCall.cpp  ImGuiDemo.cpp  Main.cpp  SceneDemo.h  ShaderLibs.cpp  ShaderLibs.h  TriangleDemo.cpp
demo/framework/: CMakeLists.txt  Framework.h
demo/framework/core/: Fwd.h  MathTypes.h  Maths.cpp  Maths.h  Object.cpp  Object.h  Resource.cpp  Resource.h
demo/framework/render/: View.cpp  View.h
demo/framework/resource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
demo/framework/scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  Node.cpp  Node.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
demo/media/shaders/: CMakeLists.txt  animation.glsl  common_uniforms.glsl  common_varyings.glsl  cubemap.frag  cubemap.vert  fullscreen.frag  fullscreen.vert  functions.glsl  material_info.glsl  pbr.frag  primitive.vert  skybox.frag  skybox.vert  textures.glsl  tonemapping.glsl
samples/: 01_TriangleDemo.cpp  02_TextureDemo.cpp  03_ComputeShaderDemo.cpp  04_DescriptorSetDemo.cpp  06_RenderTargetDemo.cpp  07_RenderQueueDemo.cpp  08_DynamicBufferDemo.cpp  Application.cpp  Application.h  CMakeLists.txt  DemoApp.cpp  DemoApp.h  FileSystem.h  Maths.h  PlatformApp.cpp  PlatformApp.h  ShaderLibs.cpp  ShaderLibs.h  UIOverlay.cpp  UIOverlay.h  VulkanExample.cpp  VulkanExample.h  VulkanExampleBase.cpp  VulkanExampleBase.h
samples/resource/: Mesh.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.cpp  Texture.h
src/: CMakeLists.txt  DynamicBufferPool.cpp  DynamicBufferPool.h  Format.cpp  Format.h  FrameListener.h  Fwd.h  GfxObject.cpp  GfxObject.h  GraphicsApi.cpp  GraphicsApi.h  GraphicsConsts.h  GraphicsDefs.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsFwd.h  GraphicsHandles.cpp  GraphicsHandles.h  PipelineState.cpp  PipelineState.h  RenderQueue.h  Sampler.cpp  Sampler.h  ShaderResourceInfo.cpp  ShaderResourceInfo.h  SyncContext.cpp  SyncContext.h  TextureData.cpp  TextureData.h  Uniforms.h
src/api/: CircularBuffer.cpp  CircularBuffer.h  CommandBufferQueue.cpp  CommandBufferQueue.h  CommandStream.cpp  CommandStream.h  CommandStreamDispatcher.h  Dispatcher.h  GraphicsApi.inc
src/app/: Application.cpp  Application.h  CMakeLists.txt  CameraController.cpp  IBL.cpp  IBL.h  SDL.cpp  UIOverlay.cpp  UIOverlay.h
src/framework/: CMakeLists.txt  Framework.cpp  Framework.h
src/framework/core/: Config.cpp  Config.h  FileSystem.cpp  FileSystem.h  Fwd.h  Maths.cpp  Maths.h  Object.cpp  Object.h  System.cpp  System.h
src/framework/render/: PassID.cpp  PassID.h  PassName.cpp  PassName.h  RenderDefs.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h  View.cpp  View.h
src/framework/resource/: Material.cpp  Material.h  Mesh.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderEffect.cpp  ShaderEffect.h  Texture.cpp  Texture.h  TextureLoader.cpp
src/framework/scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  InstanceRenderable.cpp  InstanceRenderable.h  Light.cpp  Light.h  MeshGroup.cpp  MeshGroup.h  MeshRenderable.cpp  MeshRenderable.h  Node.cpp  Node.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
src/gfx/: CMakeLists.txt  DynamicBufferPool.h  Format.h  GraphicsApi.h  GraphicsConsts.h  GraphicsDefs.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsHandles.h  PipelineState.h  ShaderResourceInfo.cpp  SyncContext.cpp  TextureData.cpp  Uniforms.h
src/gfx/api/: CommandStream.cpp  CommandStream.h  GraphicsApi.inc
src/gfx/utils/: FileSystem.h  FileUtils.cpp  FileUtils.h  Log.cpp  RefCounted.h  SharedPtr.h  WeakPtr.h  algorithm.h
src/gfx/vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandQueue.cpp  CommandQueue.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  ResourceSet.h  ShaderCompiler.cpp  ShaderCompiler.h  UploadHeap.cpp  VulkanBuffer.cpp  VulkanDebug.cpp  VulkanDefs.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHandles.cpp  (+11 more)
src/misc/: Callable.h  Ring.h
src/utils/: ChunkedArray.h  FileSystem.cpp  FileSystem.h  FileUtils.cpp  FileUtils.h  HandleAllocator.h  Log.cpp  Log.h  RefCounted.cpp  RefCounted.h  Ring.h  SharedPtr.h  SpinLock.h  ThreadUtils.cpp  WeakPtr.h  algorithm.h
src/vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  CommandQueue.cpp  CommandQueue.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  ResourceSet.cpp  ResourceSet.h  ShaderCompiler.cpp  ShaderCompiler.h  UploadHeap.cpp  UploadHeap.h  VkFormatHelper.cpp  VkFormatHelper.h  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDefs.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceHelper.cpp  VulkanDeviceHelper.h  VulkanHandles.cpp  VulkanHandles.h  VulkanHelper.cpp  VulkanHelper.h  VulkanImageUtility.cpp  VulkanImageUtility.h  VulkanInitializers.hpp  VulkanObjects.h  VulkanProgram.cpp  (+13 more)
(+19 files in other folders)
